RÃ©alisation d'une interface de dÃ©part
Ce commit contient:

- Un fichier style.css contenant le style du site
- Un fichier Navbar.vue contenant la barre de navigation verticale du
site
- Le logo de la plateforme (une version avec et une version sans le
texte)
- Un fichier Player contenant le design du lecteur de flux audio
- Un fichier RadioStations.vue qui contiendra la
liste des stations de radio disponibles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-radio</title>
+    <meta name="theme-color" content="#161F2B"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <title>Ecoutez la radio en ligne</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app"></div>
