--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="static/recorder.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
