--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#161F2B"/>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>Ecoutez la radio en ligne</title>
+    <link rel="icon" type="image/ico" href="static/favicon.ico" />
+    <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>
@@ -13,5 +15,10 @@
     <div id="app"></div>
     <script src="static/js/recorder.js"></script>
     <!-- built files will be auto injected -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js');
+      }
+    </script>
   </body>
 </html>
